--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,6 @@ plugins:
   - search
   - git-revision-date-localized:
       enable_creation_date: true
-  #- extra-sass
   - macros:
       module_name: tools/macro
       include_dir: include
@@ -99,8 +98,8 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
       options:
         custom_icons:
           - overrides/.icons
