--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -298,6 +298,7 @@ nav:
     - release/stable.md
     - release/develop.md
     - Release Notes:
+      - release/note/2.5.19.md
       - release/note/2.5.18.md
       - release/note/2.5.17.md
       - release/note/2.5.16.md
