Port Spoofax first project tutorial from old docs website

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,6 +143,7 @@ nav:
     - getting-started.md
   - Tutorials:
     - tutorials/index.md
+    - tutorials/start.md
   - How-Tos:
     - howtos/index.md
     - Installation:
