--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -299,6 +299,7 @@ nav:
     - release/stable.md
     - release/develop.md
     - Release Notes:
+      - release/note/2.5.22.md
       - release/note/2.5.21.md
       - release/note/2.5.20.md
       - release/note/2.5.19.md
