--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,13 +152,11 @@ nav:
       - howtos/installation/install-from-source.md
       - howtos/installation/install-spoofax-on-macos-arm.md
     - Static Semantics:
-      - howtos/statix/index.md
       - howtos/statix/debugging.md
       - howtos/statix/migrating-from-nabl2.md
       - howtos/statix/migrating-to-concurrent-solver.md
       - howtos/statix/signature-generator.md
     - Transformation:
-      - howtos/stratego/index.md
       - howtos/stratego/generate-signature.md
       - howtos/stratego/run-stratego-programs.md
       - howtos/stratego/generate-pretty-printer.md
@@ -169,6 +167,8 @@ nav:
       - howtos/stratego/stratego-1-to-2.md
     - Editor Services:
       - howtos/editor-services/rename-refactoring.md
+    - Command-Line Interface:
+      - howtos/command-line/index.md
     - Development:
       - howtos/development/index.md
       - howtos/development/spoofax-dev-requirements.md
